syntax = "proto3";

package event;

option go_package = "github.com/AnastasiaDAmber/golang_homework/hw12_13_14_15_calendar/api/event";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// Event представляет календарное событие
message Event {
    string id = 1;
    string title = 2;
    google.protobuf.Timestamp at = 3;
    google.protobuf.Duration duration = 4;
    string description = 5;
    string user_id = 6;
    google.protobuf.Duration notify_before = 7;
}

// CreateEventRequest - запрос на создание события
message CreateEventRequest {
    Event event = 1;
}

// CreateEventResponse - ответ на создание события
message CreateEventResponse {
    string id = 1;
}

// UpdateEventRequest - запрос на обновление события
message UpdateEventRequest {
    Event event = 1;
}

// UpdateEventResponse - ответ на обновление события
message UpdateEventResponse {
    bool success = 1;
}

// DeleteEventRequest - запрос на удаление события
message DeleteEventRequest {
    string id = 1;
}

// DeleteEventResponse - ответ на удаление события
message DeleteEventResponse {
    bool success = 1;
}

// GetEventRequest - запрос на получение события
message GetEventRequest {
    string id = 1;
}

// GetEventResponse - ответ на получение события
message GetEventResponse {
    Event event = 1;
}

// ListEventsRequest - запрос на получение списка всех событий
message ListEventsRequest {
}

// ListEventsResponse - ответ со списком событий
message ListEventsResponse {
    repeated Event events = 1;
}

// ListEventsDayRequest - запрос на получение событий за день
message ListEventsDayRequest {
    google.protobuf.Timestamp day_start = 1;
}

// ListEventsDayResponse - ответ со списком событий за день
message ListEventsDayResponse {
    repeated Event events = 1;
}

// ListEventsWeekRequest - запрос на получение событий за неделю
message ListEventsWeekRequest {
    google.protobuf.Timestamp week_start = 1;
}

// ListEventsWeekResponse - ответ со списком событий за неделю
message ListEventsWeekResponse {
    repeated Event events = 1;
}

// ListEventsMonthRequest - запрос на получение событий за месяц
message ListEventsMonthRequest {
    google.protobuf.Timestamp month_start = 1;
}

// ListEventsMonthResponse - ответ со списком событий за месяц
message ListEventsMonthResponse {
    repeated Event events = 1;
}

// EventService - сервис для работы с событиями
service EventService {
    // CreateEvent - создание нового события
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
    
    // UpdateEvent - обновление существующего события
    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
    
    // DeleteEvent - удаление события
    rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
    
    // GetEvent - получение события по ID
    rpc GetEvent(GetEventRequest) returns (GetEventResponse);
    
    // ListEvents - получение списка всех событий
    rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
    
    // ListEventsDay - получение событий за день
    rpc ListEventsDay(ListEventsDayRequest) returns (ListEventsDayResponse);
    
    // ListEventsWeek - получение событий за неделю
    rpc ListEventsWeek(ListEventsWeekRequest) returns (ListEventsWeekResponse);
    
    // ListEventsMonth - получение событий за месяц
    rpc ListEventsMonth(ListEventsMonthRequest) returns (ListEventsMonthResponse);
}
